sfdx-source/force-app/main/default/objects/Readiness_Check_Failure__c/Readiness_Check_Failure__c.object-meta.xml
<CustomObject>
    <description>LEM-1684: It stores validation rules evaluated successfully for a store Account related to a Work Order during readiness check. Onboarding and activations persona&apos;s user will take corrective actions to resolve the failures captured in this object in order to make a store ready for provisioning.</description>
    <label>Readiness Check Failure</label>
    <nameField>
        <displayFormat>RCF-{0}</displayFormat>
        <label>Readiness Check Failure Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Readiness Check Failures</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>