sfdx-source/force-app/main/default/objects/Readiness_Check_Failure__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1684: It indicates the store Account that needs correction to resolve the failure.</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Readiness Check Failures</relationshipLabel>
    <relationshipName>Readiness_Check_Failures</relationshipName>
    <type>Lookup</type>
</CustomField>