sfdx-source/force-app/main/default/objects/Readiness_Check_Failure__c/fields/Child_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Child_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1684: It indicates the Work Order related to store associated to this failure record.</description>
    <label>Child Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Store Level Readiness Check Corrections</relationshipLabel>
    <relationshipName>Store_Level_Readiness_Check_Corrections</relationshipName>
    <type>Lookup</type>
</CustomField>