sfdx-source/force-app/main/default/objects/Readiness_Check_Failure__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1684: It indicates the Contact related to Payment Account of store Account that needs correction to resolve the failure.</description>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Readiness Check Failures</relationshipLabel>
    <relationshipName>Readiness_Check_Failures</relationshipName>
    <type>Lookup</type>
</CustomField>