sfdx-source/force-app/main/default/objects/Readiness_Check_Failure__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>LEM-1684: It indicates the error message to be displayed to onboarding and activations persona&apos;s user for corrections on the store related to the failure record.</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>