sfdx-source/force-app/main/default/objects/Readiness_Check_Failure__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>LEM-1684: It indicates the field name where the failure occurred.</description>
    <label>Field Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>