sfdx-source/force-app/main/default/objects/Readiness_Check_Failure__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>LEM-1684: It indicates the object name where the failure occurred.</description>
    <label>Object Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>