sfdx-source/force-app/main/default/objects/Readiness_Check_Failure__c/fields/Parent_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1684: It indicates the parent of work order related to the readiness check failure record.</description>
    <label>Parent Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Readiness Check Corrections</relationshipLabel>
    <relationshipName>Readiness_Check_Corrections</relationshipName>
    <type>Lookup</type>
</CustomField>