sfdx-source/force-app/main/default/objects/Readiness_Check_Failure__c/fields/Payment_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-3587: It indicates the Payment Account where readiness check validation failed.</description>
    <label>Payment Account Name</label>
    <referenceTo>Payment_Account__c</referenceTo>
    <relationshipLabel>Readiness Check Failures</relationshipLabel>
    <relationshipName>Readiness_Check_Failures</relationshipName>
    <type>Lookup</type>
</CustomField>